@@ -106,8 +106,7 @@ private:
 			QString(),
 			"Title: " + id,
 			QString(),
-			QString(),
-			false,
+			{QString(), true, false, false, false},
 			0,
 			-1,
 			password,
