@@ -92,6 +92,11 @@ bool ProtocolVersion::isFuture() const
 	return DP_protocol_version_is_future(m_protocolVersion);
 }
 
+bool ProtocolVersion::isPast() const
+{
+	return DP_protocol_version_is_past(m_protocolVersion);
+}
+
 bool ProtocolVersion::isPastCompatible() const
 {
 #ifdef HAVE_COMPATIBILITY_MODE
